# FormValidation

./: README.md
backend/: pyproject.toml  sql_app.db
backend/app/: .env  dependencies.py  main.py  test_main.py
backend/app/database/: crud.py  database.py  models.py  schemas.py  test_database.py
backend/app/database/tests/: test_db.py
backend/app/routers/: auth.py  form.py  test_auth.py  test_form.py
frontend/: .env  .env.development  .env.production  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.jsx
frontend/src/_codux/boards/: home.board.tsx
frontend/src/components/: Auth.jsx  Form.jsx  GetMessage.jsx
frontend/src/components/layout/: Footer.jsx  Layout.jsx  Navbar.jsx
frontend/src/helper/: LoggedUser.jsx  logged.jsx  logout.jsx  theme.jsx  userData.jsx
frontend/src/pages/: App.jsx  Login.jsx  NotFound.jsx  Registration.jsx  UserForms.jsx
